<resources>
    <string name="app_name">Appointy</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="registration">Registrierung</string>
    <string name="logininstead">Einloggen</string>
    <string name="logintext">Sie haben bereits einen Account?</string>
    <string name="registertext">Sie haben noch keinen Account?</string>
    <string name="registerinstead">Registrieren</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat öffnen</string>
    <string name="done">Erledigt</string>
</resources>