<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="#FEFEFE"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        style = "@style/TextStyle"
        android:layout_marginBottom="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            style = "@style/TextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginBottom="20dp"
            android:minHeight="48dp"
            android:inputType="textPassword"
            style = "@style/TextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Fortschritt anzeigen -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrationbutton"
        android:text="Registrieren"
        android:background="@drawable/button_border"
        style="@style/ButtonStyle"
        android:textColor="@color/WhiteSmoke"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logintext"
        android:text="@string/logintext"
        android:gravity="center"
        style = "@style/TextStyle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginInstead"
        android:text="@string/logininstead"
        android:gravity="center"
        android:textStyle="bold"
        style = "@style/TextStyle"
        />


</LinearLayout>